plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'jacoco'
}

java {
    sourceCompatibility = '20'
}

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}


dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-actuator")
    implementation 'org.tinylog:tinylog-api:2.6.2'
    implementation 'org.tinylog:tinylog-impl:2.6.2'
    implementation group: 'org.javamoney', name: 'moneta', version: '1.3'
    implementation group: 'com.jsoniter', name: 'jsoniter', version: '0.9.23'

    implementation(name: 'gpsUtil', ext: 'jar')
    implementation(name: 'RewardCentral', ext: 'jar')
    implementation(name: 'TripPricer', ext: 'jar')

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'junit:junit:4.13.2'

}


//jacoco {
//    toolVersion = "0.8.4"
//}
//
//jacocoTestReport {
//    reports {
//        xml.enabled true
//        csv.enabled false
//        html.destination file("${buildDir}/jacocoHtml")
//    }
//}
//
//test.finalizedBy jacocoTestReport
//check.dependsOn jacocoTestCoverageVerification
//
//jacocoTestCoverageVerification {
//    violationRules {
//        rule {
//            limit {
//                counter = 'LINE'
//                value = 'COVEREDRATIO'
//                minimum = 0.5
//            }
//        }
//    }
//}
